added test data and ngIf table

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="table-responsive">
-            <table class="table">
+            <table class="table" *ngIf='this.products && this.products.length'>
                 <thead>
                     <tr>
                         <th><button class="btn btn-primary">Show Image</button></th>
