--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="table-responsive">
-            <table class="table" *ngIf='this.products && this.products.length'>
+            <table class="table" *ngIf='products && products.length'>
                 <thead>
                     <tr>
                         <th><button class="btn btn-primary">Show Image</button></th>
@@ -30,7 +30,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr *ngFor='let product of products'>
+                        <td></td>
+                        <td>{{ product.productName }}</td>
+                        <td>{{ product.productCode }}</td>
+                        <td>{{ product.releaseDate }}</td>
+                        <td>{{ product.price }}</td>
+                        <td>{{ product.starRating }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
