--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -25,7 +25,7 @@
                             <button class="btn btn-primary" 
                             (click)='togglePictures()'
                             [style.width.px]='imageWidth + imageMargin*2'>
-                                Show Image
+                                {{showPictures? 'Hide':'Show'}} Image
                             </button>
                         </th>
                         <th>Product</th>
