--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -48,7 +48,7 @@
                         <td>{{ product.productName }}</td>
                         <td>{{ product.productCode }}</td>
                         <td>{{ product.releaseDate }}</td>
-                        <td>{{ product.price | currency}}</td>
+                        <td>{{ product.price | currency:'USD'}}</td>
                         <td>{{ product.starRating }}</td>
                     </tr>
                 </tbody>
