--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -49,7 +49,7 @@
                         <td>{{ product.productCode }}</td>
                         <td>{{ product.releaseDate }}</td>
                         <td>{{ product.price | currency:'USD'}}</td>
-                        <td>{{ product.starRating }}</td>
+                        <td><pm-star></pm-star></td>
                     </tr>
                 </tbody>
             </table>
