--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -49,7 +49,11 @@
                         <td>{{ product.productCode }}</td>
                         <td>{{ product.releaseDate }}</td>
                         <td>{{ product.price | currency:'USD'}}</td>
-                        <td><pm-star [rating]='product.starRating'></pm-star></td>
+                        <td>
+                            <pm-star 
+                                [rating]='product.starRating'
+                                (ratingClicked)='onRatingClicked($event)'>
+                            </pm-star></td>
                     </tr>
                 </tbody>
             </table>
